# BlursedECS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  output.txt
scripts/: example.lua
src/: aux.cpp  aux.hpp  components.hpp  main.cpp  systems.cpp  systems.hpp
src/ecs/: ecs.cpp  ecs.hpp  lua.cpp  lua.hpp  storage.hpp
